Update GameViewModel.java
1